[package]
name = "nrfxlib"
version = "0.5.0"
authors = ["Jonathan Pallant (42 Technology) <jonathan.pallant@42technology.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/42-technology-ltd/nrfxlib"
description = "Rust driver for the LTE stack on the Nordic nRF9160"

[dependencies]
nrf9160-pac = "0.2.1"
cortex-m = "0.6"
heapless = "0.5"
log = "0.4"
nrfxlib-sys = "1.4.2"
